--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   app:
     build:
       args:
-        user: sammy
-        uid: 1000
+        user: admin
+        uid: 1
       context: ./
       dockerfile: Dockerfile
     image: versionone
@@ -21,6 +21,8 @@ services:
     restart: unless-stopped
     env_file:
       - .env
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
@@ -30,6 +32,7 @@ services:
       SERVICE_NAME: mysql
     volumes:
       - ./docker-compose/mysql:/docker-entrypoint-initdb.d
+      - ../versionone_mysql_data:/var/lib/mysql
     networks:
       - versionone
   nginx:
@@ -48,3 +51,5 @@ services:
 networks:
   versionone:
     driver: bridge
+volumes:
+  mysql_data:
