Trying to add Vue and that other thing for frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
     build:
       args:
         user: admin
-        uid: 1
+        uid: 1000
       context: ./
       dockerfile: Dockerfile
     image: versionone
     container_name: versionone-app
     restart: unless-stopped
+    ports:
+      - ${VITE_PORT:-5173}:${VITE_PORT:-5173}
     working_dir: /var/www/
     volumes:
       - ./:/var/www
