--- a/docker-compose/nginx/versionone.conf
+++ b/docker-compose/nginx/versionone.conf
@@ -14,7 +14,23 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /index.php?$query_string @rewrite;
         gzip_static on;
+    }
+    types {
+      application/javascript js;
+      application/json json;
+      application/vnd.webpacker.module+json module.json;
+      application/wasm wasm;
+      text/x-sass sass;
+      text/x-scss scss;
+      text/css css;
+      text/x-component htc;
+      text/cache-manifest appcache;
+      text/html vue;
+    }
+
+    location @rewrite {
+      rewrite ^/(.*)$ /index.php?_url=/$1;
     }
 }
