--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^1.0.3",
+        "@vitejs/plugin-vue": "^4.1.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
